# connectbot

./: .gitignore  CERTS.md  Cargo.toml  Dockerfile.compile-pi  Dockerfile.compile-x86_64  README.md
client/: Cargo.toml
client/src/: main.rs
client/src/client/: mod.rs
client/src/server_connection/: mod.rs
client/src/ssh_connection/: check.rs  connect.rs  disconnect.rs  mod.rs
client/src/ssh_manager/: mod.rs
ctrl/: Cargo.toml
ctrl/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
server/src/config/: mod.rs
server/src/control_server/: mod.rs
server/src/device_server/: client_connection.rs  mod.rs  stream_helpers.rs
server/src/server/: client_connection.rs  mod.rs
server/src/world/: connection_history.rs  mod.rs  port_allocator.rs  ssh_forward.rs
shared/: Cargo.toml  build.rs  client.proto  control.proto  device.proto
shared/src/: codec.rs  lib.rs  timed_connection.rs
shared/src/client/: mod.rs  request_response_future.rs
web/: Cargo.toml
web/src/: main.rs
web/src/config/: mod.rs
web/src/service/: device.rs  mod.rs
web/templates/: device.hbs  index.hbs  layout.hbs
