[package]
name = "comms-client"
version = "0.1.0"
authors = ["Bryan Burgers <bryan@burgers.io>"]

[dependencies]
clap = "^2.31.2"
chrono = "^0.4"
rand = "^0.5"
futures = "^0.1"
tokio = "^0.1.6"
tokio-io = "^0.1.6"
tokio-threadpool = "^0.1.3"
tokio-timer = "^0.2.3"
bytes = "^0.4.7"
protobuf = { version = "~2.0", features = ["with-bytes"] }
# signal-hook = "0.1.3"
tempfile = "^3.0.2"
tokio-dns-unofficial = "^0.4"

[build-dependencies]
protoc-rust = "^2.0"
