[package]
name = "connectbot-server"
version = "0.1.0"
authors = ["Bryan Burgers <bryan@burgers.io>"]

[dependencies]
connectbot-shared = { version = "0.1.0", path = "../shared" }
clap = "^2.32"
signal-hook = "0.1.3"
libc = "0.2.43"

bytes = "^0.4.7"
chrono = "0.4"
futures = "^0.1"
protobuf = { version = "~2.0", features = ["with-bytes"] }
serde = "^1.0"
serde_derive = "^1.0"
tokio = "^0.1.7"
tokio-codec = "^0.1.0"
tokio-io = "^0.1.7"
tokio-threadpool = "^0.1.3"
tokio-timer = "^0.2.3"
tokio-rustls = "^0.7"
toml = "^0.4"
uuid = { version = "0.7", features = ["v4"] }
