[package]
name = "comms_shared"
version = "0.1.0"
authors = ["Bryan Burgers <bryan@burgers.io>"]

[dependencies]
bytes = "^0.4.7"
futures = "^0.1"
protobuf = { version = "~2.0", features = ["with-bytes"] }
tokio = "^0.1.7"
tokio-codec = "^0.1.0"
tokio-dns-unofficial = "^0.4.0"
tokio-io = "^0.1.7"

[build-dependencies]
protoc-rust = "^2.0"
