[package]
name = "connectbot-web"
version = "0.1.0"
authors = ["Bryan Burgers <bryan@burgers.io>"]

[dependencies]
connectbot-shared = { version = "0.1.0", path = "../shared" }

chrono = "0.4"
clap = "^2.31.2"
futures = "^0.1"
serde = "^1.0.27"
serde_derive = "^1.0.74"
serde_json = "^1.0.26"
tokio = "^0.1.7"
tower-web = "^0.3.1"
